# templates

./: .gitmodules  README.md  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exx.cpp
.github/wokrflows/: main.yml
.github/workflow/: make_unique.yml
.github/workflows/: main.yml  make_unique.yaml  make_unique.yml
01-basics/: 00-pre-test.md  00-templates-intro.md  01-template-functions.md  02-template-classes.md  03-type-traits.md  04-specialization.md  05-partial-specialization.md  06-overload-resolution.md  07-variable-templates.md  08-homework.md  09-recap.md  10-pre-test-answers.md  example2.cpp  index.html
01-basics/en-solution/: map.cpp
01-basics/pl-solution/: map.cpp
01-basics/solutions/: someclass.cpp
01-basics/solutions/complex2/: complexImpl.hpp
01-basics/solutions/vectorMap/: main.cpp  map.cpp  vectorMap.cpp  vectorMap.hpp
02-advanced/: 00-pre-test.md  01-deduction-guides.md  02-overload-resolution-rules.md  03-sfinae.md  04-template-template-params.md  05-variadic-templates.md  06-fold-expressions.md  07-crtp.md  08-homework.md  09-recap.md  index.html
02-advanced/en-solutions/: main.cpp  print.cpp  variadic.cpp
02-advanced/examples/: enable_if.cpp  variadic.cpp
02-advanced/exercises/: modern_sfinae.cpp
02-advanced/homework/make_unique/: README.md
02-advanced/pl-solutions/: array.cpp  print.cpp  tt3.cpp
02-advanced/shapes/: CMakeLists.txt  main.cpp
module1/: 00-intro.md  00-templates-intro.md  01-template-functions.md  02-template-classes.md  03-template-classes.md  03-type-traits.md  04-specialization.md  05-overload-resolution.md  05-partial-specialization.md  06-overload-resolution.md  06-partial-specialization.md  07-variable-templates.md  08-homework.md  09-recap.md  agenda.md  concepts.md  cover.md  fold_expressions.cpp  index.html  intro.md  specialization.md  variadic.cpp  variadic_templates.md
module1/en-solution/: complex.cpp
module1/homework/make_unique/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  makeUnique-ut.cpp  makeUnique.hpp  make_unique-ut.cpp  make_unique.hpp  test.cpp
module1/homework/make_unique/include/: make_unique.hpp
module1/homework/make_unique/tests/: make_unique.ut.cpp  tests.cpp
module1/pl-solution/: c.cpp  c.hpp  complex.cpp
module1/vectorMap/: main.cpp  vectorMap.hpp
module2/: 00-intro.md  01-deduction-guidelines.md  02-overload-resolution-rules.md  03-sfinae.md  04-template-template-params.md  05-variadic-templates.md  06-fold-expressions.md  07-crtp.md  08-homework.md  09-recap.md  homework.md  index.html  modern_sfinae.cpp  swapo.cpp  template.cpp  variadic_templates.md
module2/en-solutions/: tt.cpp
module2/examples/: make_array.cpp  print.cpp  sfinae.cpp  swapo.cpp  temp.cpp  template2.cpp
module2/exercises/: template-template.cpp  template-template2.cpp
module2/homework/make_unique/: README.md
module2/pl-solutions/: main.cpp  temp.cpp  tt.cpp  tt2.cpp  tt4.cpp
module2/shapes/: CMakeLists.txt
